==> vacmg/PurifyMyWater/Tests/UNOTFTSCREEN/3.95inch_Arduino_8BIT_Module_ST7796S_MAR3954_V1.0/1-Demo/Demo_STM32/Demo_STM32H743IIT6_8BIT_IO_Simulation/HARDWARE/LCD/lcd.c <==
#include "lcd.h"
#include "stdlib.h"
#include "delay.h"

void LCD_ReadReg(u16 LCD_Reg,u8 *Rval,int n)
{
	LCD_WR_REG(LCD_Reg); 
	GPIOE->MODER=0;               //输入
	GPIOE->BSRRL=0X0000FFFF; //PE0-15 拉高
	while(n--)
	{		
		*(Rval++) = LCD_RD_DATA();
	}
	
	GPIOE->MODER=0X55555555;      //输出
	GPIOE->BSRRL=0X0000FFFF; //PE0-15 拉高
}

u16 LCD_ReadPoint(u16 x,u16 y)
{
	u16 color;
	if(x>=lcddev.width||y>=lcddev.height)
	{
		return 0;	//超过了范围,直接返回	
	}
	LCD_SetCursor(x,y);//设置光标位置 
	LCD_ReadRAM_Prepare();
	GPIOE->MODER=0;               //输入
	GPIOE->BSRRL=0X0000FFFF; //PE0-15 拉高
	
	color = Lcd_ReadData_16Bit();
	
	GPIOE->MODER=0X55555555;      //输出
	GPIOE->BSRRL=0X0000FFFF; //PE0-15 拉高
	return color;
}

void LCD_GPIOInit(void)
{
		GPIO_InitTypeDef GPIO_Initure;
    
    __HAL_RCC_GPIOC_CLK_ENABLE();           //使能GPIOC时钟
		__HAL_RCC_GPIOE_CLK_ENABLE();           //使能GPIOE时钟
    
    GPIO_Initure.Pin=GPIO_PIN_10| GPIO_PIN_7|GPIO_PIN_8| GPIO_PIN_9|GPIO_PIN_6|GPIO_PIN_4;            //PC10,6,7,8,9,4
    GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
    GPIO_Initure.Pull=GPIO_PULLUP;          //上拉
    GPIO_Initure.Speed=GPIO_SPEED_FREQ_LOW;     //快速         
    HAL_GPIO_Init(GPIOC,&GPIO_Initure);     //初始化
		HAL_GPIO_WritePin(GPIOC, GPIO_PIN_10| GPIO_PIN_7|GPIO_PIN_8| GPIO_PIN_9|GPIO_PIN_6|GPIO_PIN_4, GPIO_PIN_SET);
		
		GPIO_Initure.Pin=GPIO_PIN_All;    //GPIOE
		HAL_GPIO_Init(GPIOE,&GPIO_Initure);     //初始化
		HAL_GPIO_WritePin(GPIOE, GPIO_PIN_All, GPIO_PIN_SET);
}
