==> vacmg/PurifyMyWater/Source/H2O_GUI/resources/UNOTFTSCREEN/3.95inch_Arduino_8BIT_Module_ST7796S_MAR3954_V1.0/1-Demo/Demo_STM32/Demo_STM32F407ZGT6_8BIT_IO_Simulation/HARDWARE/LCD/lcd.c <==
#include "lcd.h"
#include "stdlib.h"
#include "delay.h"

void LCD_ReadReg(u16 LCD_Reg,u8 *Rval,int n)
{
	LCD_WR_REG(LCD_Reg); 
	GPIOG->MODER=0;  //输入
	GPIOG->BSRRH=0XFFFF; //PG0-15  上拉
	while(n--)
	{		
		*(Rval++) = LCD_RD_DATA();
	}
	
	GPIOG->MODER=0X55555555;  //输出
	GPIOG->BSRRH=0XFFFF; //PG0-15  上拉
}

u16 LCD_ReadPoint(u16 x,u16 y)
{
	u16 color;
	if(x>=lcddev.width||y>=lcddev.height)
	{
		return 0;	//超过了范围,直接返回	
	}
	LCD_SetCursor(x,y);//设置光标位置 
	LCD_ReadRAM_Prepare();
	GPIOG->MODER=0;  //输入
	GPIOG->BSRRH=0XFFFF; //PG0-15  上拉

	
	color = Lcd_ReadData_16Bit();
	
	GPIOG->MODER=0X55555555;  //输出
	GPIOG->BSRRH=0XFFFF; //PG0-15  上拉
	return color;
}

void LCD_GPIOInit(void)
{
	GPIO_InitTypeDef  GPIO_InitStructure;
	      
	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOG|RCC_AHB1Periph_GPIOC,ENABLE);
	
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10|GPIO_Pin_7|GPIO_Pin_8|GPIO_Pin_9|GPIO_Pin_6; //GPIOC10,6,7,8,9
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;//普通输出模式
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;   //推挽输出
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;//上拉
	GPIO_Init(GPIOC, &GPIO_InitStructure);
	GPIO_SetBits(GPIOC,GPIO_Pin_10|GPIO_Pin_7|GPIO_Pin_8|GPIO_Pin_9|GPIO_Pin_6);
	
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_All;
	GPIO_Init(GPIOG, &GPIO_InitStructure); //GPIOF
	GPIO_SetBits(GPIOG,GPIO_Pin_All);	
}
